# clang-minimal-example

./: CMakeLists.txt  README.md  main.cc
